[package]
name = "tic-tac-toe-yew-struct-component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tic-tac-toe = { git = "https://github.com/hkBst/tic-tac-toe" }
yew = { version = "0.21.0", features = ["csr"] }

